[tool.poetry]
name = "rbac-api"
version = "0.1.0"
description = ""
authors = ["slocksert <rsdlj01@gmail.com>"]
readme = "README.md"
packages = [{include = "rbac_api"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pymysql = "^1.0.3"
alembic = "^1.11.1"
fastapi = "^0.95.2"
sqlmodel = "^0.0.8"
python-decouple = "^3.8"
uvicorn = "^0.22.0"
pika = "^1.3.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
argon2-cffi = "^21.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
